apply now image stretching problem fix

--- a/public/style.css
+++ b/public/style.css
@@ -334,6 +334,8 @@ html
  }
  /* Apply now */
 .applynow-headerimage{
+    object-position: center 35%;
+    object-fit: cover;
     position: relative;
     display: inline-block;
 }
